Сделал 2 часть 1 домашки

--- a/shared/api/order/v1/components/create_order_response.yaml
+++ b/shared/api/order/v1/components/create_order_response.yaml
@@ -10,7 +10,7 @@ properties:
     example: "59347286-0cde-4eae-bfbd-a9d1b2a615af"
   total_price:
     type: number
-    format: float
+    format: float64
     minimum: 0.0
     description: Общая стоимость заказа
     example: 100.0
