--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,38 +2,35 @@ version: '3'
 
 # Глобальные переменные проекта
 vars:
-  GO_VERSION: '1.25.2'
+  GO_VERSION: '1.25.3'
   GOLANGCI_LINT_VERSION: 'v2.1.5'
   GCI_VERSION: 'v0.13.6'
   GOFUMPT_VERSION: 'v0.8.0'
   BUF_VERSION: '1.53.0'
   PROTOC_GEN_GO_VERSION: 'v1.36.6'
   PROTOC_GEN_GO_GRPC_VERSION: 'v1.5.1'
-  PROTOC_GEN_GRPC_GATEWAY_VERSION: 'v2.26.3'
-  PROTOC_GEN_VALIDATE_VERSION: 'v1.2.1'
-  PROTOC_GEN_OPENAPIV2_VERSION: 'v2.26.3'
   OGEN_VERSION: 'v1.12.0'
   YQ_VERSION: 'v4.45.2'
+  GRPCURL_VERSION: 'v1.9.3'
 
   BIN_DIR: '{{.ROOT_DIR}}/bin'
   GOLANGCI_LINT: '{{.BIN_DIR}}/golangci-lint'
   GCI: '{{.BIN_DIR}}/gci'
   GOFUMPT: '{{.BIN_DIR}}/gofumpt'
   BUF: '{{.BIN_DIR}}/buf'
-  PROTOC_GEN_GO: '{{.BIN_DIR}}/protoc-gen-go'
-  PROTOC_GEN_GO_GRPC: '{{.BIN_DIR}}/protoc-gen-go-grpc'
-  PROTOC_GEN_GRPC_GATEWAY: '{{.BIN_DIR}}/protoc-gen-grpc-gateway'
-  PROTOC_GEN_VALIDATE: '{{.BIN_DIR}}/protoc-gen-validate'
-  PROTOC_GEN_OPENAPIV2: '{{.BIN_DIR}}/protoc-gen-openapiv2'
   OGEN: '{{.BIN_DIR}}/ogen'
   YQ: '{{.BIN_DIR}}/yq'
-
-  OPEN_API_ORDER_V1_BASE: '{{.ROOT_DIR}}/shared/api/order/v1/order.openapi.yaml'
-  OPEN_API_ORDER_V1_BUNDLE: '{{.ROOT_DIR}}/shared/api/bundles/order.openapi.v1.bundle.yaml'
-  OPEN_API_FILES: '{{.ROOT_DIR}}/shared/api/bundles'
+  PROTOC_GEN_GO: '{{.BIN_DIR}}/protoc-gen-go'
+  PROTOC_GEN_GO_GRPC: '{{.BIN_DIR}}/protoc-gen-go-grpc'
+  GRPCURL: '{{.BIN_DIR}}/grpcurl'
 
   NODE_MODULES_DIR: '{{.ROOT_DIR}}/node_modules/.bin'
   REDOCLY: '{{.NODE_MODULES_DIR}}/redocly'
+
+  OPEN_API_ORDER_V1_BASE: '{{.ROOT_DIR}}/shared/api/order/v1/order.openapi.yaml'
+  OPEN_API_ORDER_V1_BUNDLE: '{{.ROOT_DIR}}/shared/api/bundles/order.openapi.v1.bundle.yaml'
+
+  OPEN_API_FILES: '{{.ROOT_DIR}}/shared/api/bundles'
 
   MODULES: assembly inventory order payment platform iam notification
 
@@ -135,40 +132,19 @@ tasks:
         done
         exit $ERR
 
-  deps:update:
-    desc: "Обновление зависимостей в go.mod во всех модулях"
-    cmds:
-      - |
-        echo "🔄 Обновление зависимостей в go.work"
-        go work sync
-        echo "🔄 Обновление зависимостей в go.mod во всех модулях"
-        for mod in {{.MODULES}}; do
-          if [ -d "$mod" ]; then
-            echo "🔄 Обновление зависимостей в $mod"
-            (cd "$mod" && go mod tidy -compat=1.24) || exit 1
-          fi
-        done
-
   install-buf:
     desc: "Устанавливает Buf в каталог bin"
     cmds:
       - |
-        mkdir -p {{.BIN_DIR}}
         [ -f {{.BUF}} ] || {
-          echo '📦 Устанавливаем buf {{.BUF_VERSION}}...'
-          GOBIN={{.BIN_DIR}} go install github.com/bufbuild/buf/cmd/buf@v{{.BUF_VERSION}}
+          mkdir -p {{.BIN_DIR}} tmp-buf
+          curl -sSL \
+            "https://github.com/bufbuild/buf/releases/download/v{{.BUF_VERSION}}/buf-$(uname -s)-$(uname -m).tar.gz" \
+            | tar -xz -C tmp-buf
+          mv tmp-buf/buf/bin/buf {{.BUF}}
+          rm -rf tmp-buf
+          chmod +x {{.BUF}}
         }
-    status:
-      - test -x {{.BUF}}
-
-  proto:update-deps:
-    deps: [ install-buf ]
-    desc: Обновляет зависимости protobuf из удаленных репозиториев (googleapis и т.д.)
-    dir: proto
-    cmds:
-      - |
-        echo "🔄 Обновляем зависимости buf..."
-        {{.BUF}} dep update
 
   proto:install-plugins:
     desc: "Устанавливает protoc плагины в каталог bin"
@@ -182,32 +158,20 @@ tasks:
           echo '📦 Installing protoc-gen-go-grpc...'
           GOBIN={{.BIN_DIR}} go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@{{.PROTOC_GEN_GO_GRPC_VERSION}}
         }
-        [ -f {{.PROTOC_GEN_GRPC_GATEWAY}} ] || {
-          echo '📦 Installing protoc-gen-grpc-gateway...'
-          GOBIN={{.BIN_DIR}} go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@{{.PROTOC_GEN_GRPC_GATEWAY_VERSION}}
-        }
-        [ -f {{.PROTOC_GEN_VALIDATE}} ] || {
-          echo '📦 Installing protoc-gen-validate...'
-          GOBIN={{.BIN_DIR}} go install github.com/envoyproxy/protoc-gen-validate@{{.PROTOC_GEN_VALIDATE_VERSION}}
-        }
-        [ -f {{.PROTOC_GEN_OPENAPIV2}} ] || {
-          echo '📦 Installing protoc-gen-openapiv2...'
-          GOBIN={{.BIN_DIR}} go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@{{.PROTOC_GEN_OPENAPIV2_VERSION}}
-        }
-
-  proto:lint:
-    deps: [ install-buf, proto:install-plugins, proto:update-deps ]
-    desc: Проверка .proto-файлов на соответствие стилю
-    dir: shared/proto
-    cmds:
-      - '{{.BUF}} lint'
 
   proto:gen:
-    deps: [ install-buf, proto:install-plugins, proto:update-deps, proto:lint ]
+    deps: [ install-buf, proto:install-plugins, proto:lint ]
     desc: Генерация Go-кода из .proto
     dir: shared/proto
     cmds:
       - '{{.BUF}} generate'
+
+  proto:lint:
+    deps: [ install-buf, proto:install-plugins ]
+    desc: Проверка .proto-файлов на соответствие стилю
+    dir: shared/proto
+    cmds:
+      - '{{.BUF}} lint'
 
   redocly-cli:install:
     desc: Установить локально Redocly CLI
@@ -215,12 +179,9 @@ tasks:
       - |
         [ -f {{.REDOCLY}} ] || {
           npm ci
-        } || {
-          echo "📦 Устанавливаем redocly-cli..."
-          npm install
         }
 
-  redocly-cli:weather-v1-bundle:
+  redocly-cli:order-v1-bundle:
     desc: Собрать OpenAPI в один файл через локальный redocly
     deps: [ redocly-cli:install ]
     cmds:
@@ -230,7 +191,7 @@ tasks:
     desc: Собрать все схемы OpenAPI в общие файлы через локальный redocly
     deps: [ redocly-cli:install ]
     cmds:
-      - task: redocly-cli:weather-v1-bundle
+      - task: redocly-cli:order-v1-bundle
 
   ogen:install:
     desc: "Скачивает ogen в папку bin"
@@ -239,15 +200,6 @@ tasks:
         [ -f {{.OGEN}} ] || {
           mkdir -p {{.BIN_DIR}}
           GOBIN={{.BIN_DIR}} go install github.com/ogen-go/ogen/cmd/ogen@{{.OGEN_VERSION}}
-        }
-
-  yq:install:
-    desc: "Устанавливает yq в bin/ при необходимости"
-    cmds:
-      - |
-        [ -f {{.YQ}} ] || {
-          echo '📦 Installing yq...'
-          GOBIN={{.BIN_DIR}} go install github.com/mikefarah/yq/v4@{{.YQ_VERSION}}
         }
 
   ogen:gen:
@@ -272,7 +224,233 @@ tasks:
         done
 
   gen:
-    desc: "Генерирует код из всех спецификаций (proto + OpenAPI)"
+    desc: "Генерация всех proto и OpenAPI деклараций"
     cmds:
       - task: proto:gen
       - task: ogen:gen
+
+  deps:update:
+    desc: "Обновление зависимостей в go.mod во всех модулях"
+    cmds:
+      - |
+        echo "🔄 Обновление зависимостей в go.mod во всех модулях"
+        for mod in {{.MODULES}}; do
+          if [ -d "$mod" ]; then
+            echo "🔄 Обновление зависимостей в $mod"
+            (cd "$mod" && go mod tidy -compat=1.24) || exit 1
+          fi
+        done
+
+  yq:install:
+    desc: "Устанавливает yq в bin/ при необходимости"
+    cmds:
+      - |
+        [ -f {{.YQ}} ] || {
+          echo '📦 Installing yq...'
+          GOBIN={{.BIN_DIR}} go install github.com/mikefarah/yq/v4@{{.YQ_VERSION}}
+        }
+
+  grpcurl:install:
+    desc: "Устанавливает grpcurl в каталог bin"
+    cmds:
+      - |
+        [ -f {{.GRPCURL}} ] || {
+          echo '📦 Устанавливаем grpcurl {{.GRPCURL_VERSION}}...'
+          GOBIN={{.BIN_DIR}} go install github.com/fullstorydev/grpcurl/cmd/grpcurl@{{.GRPCURL_VERSION}}
+        }
+    status:
+      - test -x {{.GRPCURL}}
+
+  test-api:
+    desc: "🧪 Запуск тестов для проверки API микросервисов"
+    deps: [ grpcurl:install ]
+    cmds:
+      - |
+        echo "🧪 Тестирование API микросервисов через gRPC и REST"
+        
+        echo "📦 Тест 1: Получение списка деталей из Inventory"
+        PARTS_RESPONSE=$({{.GRPCURL}} -plaintext -d '{"filter":{}}' localhost:50051 inventory.v1.InventoryService/ListParts)
+        
+        if [[ -z "$PARTS_RESPONSE" || "$PARTS_RESPONSE" == *"error"* ]]; then
+          echo "❌ Не удалось получить список деталей."
+          echo "🔍 Ответ сервера: $PARTS_RESPONSE"
+          exit 1
+        fi
+        
+        # Извлекаем UUID первой детали для дальнейших тестов
+        PART_UUID=$(echo $PARTS_RESPONSE | grep -o '"uuid": "[^"]*' | head -1 | cut -d'"' -f4)
+        if [ -z "$PART_UUID" ]; then
+          echo "❌ Не удалось найти UUID детали в ответе."
+          echo "🔍 Ответ сервера: $PARTS_RESPONSE"
+          exit 1
+        fi
+        echo "✅ Успешно получен список деталей, первая UUID: $PART_UUID"
+        
+        echo
+        echo "🔍 Тест 2: Получение информации о детали по UUID"
+        PART_RESPONSE=$({{.GRPCURL}} -plaintext -d "{\"uuid\":\"$PART_UUID\"}" localhost:50051 inventory.v1.InventoryService/GetPart)
+        
+        if [[ -z "$PART_RESPONSE" || "$PART_RESPONSE" == *"error"* ]]; then
+          echo "❌ Не удалось получить информацию о детали."
+          echo "🔍 Ответ сервера: $PART_RESPONSE"
+          exit 1
+        fi
+        
+        # Извлекаем имя детали 
+        PART_NAME=$(echo $PART_RESPONSE | grep -o '"name": "[^"]*' | cut -d'"' -f4)
+        if [ -z "$PART_NAME" ]; then
+          echo "❌ Не удалось извлечь имя детали из ответа."
+          echo "🔍 Ответ сервера: $PART_RESPONSE"
+          exit 1
+        fi
+        echo "✅ Успешно получена деталь: $PART_NAME"
+        
+        echo
+        echo "👤 Тест 3: Создание пользователя для тестов"
+        # Генерируем уникальный UUID для пользователя
+        USER_UUID=$(uuidgen | tr '[:upper:]' '[:lower:]')
+        echo "✅ Сгенерирован UUID пользователя: $USER_UUID"
+        
+        echo
+        echo "📝 Тест 4: Создание заказа (REST API)"
+        ORDER_RESPONSE=$(curl -s -X POST "http://localhost:8080/api/v1/orders" \
+          -H "Content-Type: application/json" \
+          -d "{\"user_uuid\":\"$USER_UUID\",\"part_uuids\":[\"$PART_UUID\"]}")
+        
+        if [[ -z "$ORDER_RESPONSE" || "$ORDER_RESPONSE" == *"error"* ]]; then
+          echo "❌ Не удалось создать заказ."
+          echo "🔍 Ответ сервера: $ORDER_RESPONSE"
+          exit 1
+        fi
+        
+        # Извлекаем UUID заказа с учетом разных форматов JSON
+        ORDER_UUID=$(echo $ORDER_RESPONSE | grep -o '"order_uuid":"[^"]*' | cut -d'"' -f4)
+        if [ -z "$ORDER_UUID" ]; then
+          ORDER_UUID=$(echo $ORDER_RESPONSE | grep -o '"order_uuid": "[^"]*' | cut -d'"' -f4)
+          if [ -z "$ORDER_UUID" ]; then
+            echo "❌ Не удалось извлечь UUID заказа из ответа."
+            echo "🔍 Ответ сервера: $ORDER_RESPONSE"
+            exit 1
+          fi
+        fi
+        echo "✅ Успешно создан заказ с UUID: $ORDER_UUID"
+        
+        echo
+        echo "📊 Тест 5: Проверка начального статуса заказа (должен быть PENDING_PAYMENT)"
+        ORDER_INFO_RESPONSE=$(curl -s -X GET "http://localhost:8080/api/v1/orders/$ORDER_UUID")
+        
+        if [[ -z "$ORDER_INFO_RESPONSE" || "$ORDER_INFO_RESPONSE" == *"error"* ]]; then
+          echo "❌ Не удалось получить информацию о заказе."
+          echo "🔍 Ответ сервера: $ORDER_INFO_RESPONSE"
+          exit 1
+        fi
+        
+        # Извлекаем статус заказа с учетом разных форматов JSON
+        ORDER_STATUS=$(echo $ORDER_INFO_RESPONSE | grep -o '"status":"[^"]*' | cut -d'"' -f4)
+        if [ -z "$ORDER_STATUS" ]; then
+          ORDER_STATUS=$(echo $ORDER_INFO_RESPONSE | grep -o '"status": "[^"]*' | cut -d'"' -f4)
+          if [ -z "$ORDER_STATUS" ]; then
+            echo "❌ Не удалось извлечь статус заказа из ответа."
+            echo "🔍 Ответ сервера: $ORDER_INFO_RESPONSE"
+            exit 1
+          fi
+        fi
+        
+        # Проверяем, что начальный статус PENDING_PAYMENT
+        if [[ "$ORDER_STATUS" != *"PENDING_PAYMENT"* ]]; then
+          echo "❌ Неверный начальный статус заказа. Ожидался PENDING_PAYMENT, получен: $ORDER_STATUS"
+          exit 1
+        fi
+        echo "✅ Начальный статус заказа корректный: $ORDER_STATUS"
+        
+        echo
+        echo "💰 Тест 6: Оплата заказа (REST API)"
+        PAY_RESPONSE=$(curl -s -X POST "http://localhost:8080/api/v1/orders/$ORDER_UUID/pay" \
+          -H "Content-Type: application/json" \
+          -d "{\"payment_method\":\"CARD\"}")
+        
+        if [[ "$PAY_RESPONSE" == *"error"* ]]; then
+          echo "❌ Ошибка при оплате заказа."
+          echo "🔍 Ответ сервера: $PAY_RESPONSE"
+          exit 1
+        fi
+        echo "✅ Заказ успешно оплачен"
+        
+        echo
+        echo "📊 Тест 7: Проверка статуса после оплаты (должен быть PAID)"
+        ORDER_INFO_RESPONSE=$(curl -s -X GET "http://localhost:8080/api/v1/orders/$ORDER_UUID")
+        
+        # Извлекаем статус заказа
+        ORDER_STATUS=$(echo $ORDER_INFO_RESPONSE | grep -o '"status":"[^"]*' | cut -d'"' -f4)
+        if [ -z "$ORDER_STATUS" ]; then
+          ORDER_STATUS=$(echo $ORDER_INFO_RESPONSE | grep -o '"status": "[^"]*' | cut -d'"' -f4)
+        fi
+        
+        # Проверяем, что статус стал PAID
+        if [[ "$ORDER_STATUS" != *"PAID"* && "$ORDER_STATUS" != *"ASSEMBLED"* ]]; then
+          echo "❌ Неверный статус заказа после оплаты. Ожидался PAID или ASSEMBLED, получен: $ORDER_STATUS"
+          exit 1
+        fi
+        echo "✅ Статус заказа после оплаты: $ORDER_STATUS"
+        
+        echo
+        echo "📝 Тест 8: Создание второго заказа для отмены (REST API)"
+        ORDER2_RESPONSE=$(curl -s -X POST "http://localhost:8080/api/v1/orders" \
+          -H "Content-Type: application/json" \
+          -d "{\"user_uuid\":\"$USER_UUID\",\"part_uuids\":[\"$PART_UUID\"]}")
+        
+        if [[ -z "$ORDER2_RESPONSE" || "$ORDER2_RESPONSE" == *"error"* ]]; then
+          echo "❌ Не удалось создать второй заказ."
+          echo "🔍 Ответ сервера: $ORDER2_RESPONSE"
+          exit 1
+        fi
+        
+        # Извлекаем UUID второго заказа с учетом разных форматов JSON
+        ORDER2_UUID=$(echo $ORDER2_RESPONSE | grep -o '"order_uuid":"[^"]*' | cut -d'"' -f4)
+        if [ -z "$ORDER2_UUID" ]; then
+          ORDER2_UUID=$(echo $ORDER2_RESPONSE | grep -o '"order_uuid": "[^"]*' | cut -d'"' -f4)
+          if [ -z "$ORDER2_UUID" ]; then
+            echo "❌ Не удалось извлечь UUID второго заказа из ответа."
+            echo "🔍 Ответ сервера: $ORDER2_RESPONSE"
+            exit 1
+          fi
+        fi
+        echo "✅ Успешно создан второй заказ с UUID: $ORDER2_UUID"
+        
+        # Проверяем его начальный статус
+        ORDER2_INFO=$(curl -s -X GET "http://localhost:8080/api/v1/orders/$ORDER2_UUID")
+        ORDER2_STATUS=$(echo $ORDER2_INFO | grep -o '"status":"[^"]*' | cut -d'"' -f4)
+        if [ -z "$ORDER2_STATUS" ]; then
+          ORDER2_STATUS=$(echo $ORDER2_INFO | grep -o '"status": "[^"]*' | cut -d'"' -f4)
+        fi
+        
+        if [[ "$ORDER2_STATUS" != *"PENDING_PAYMENT"* ]]; then
+          echo "❌ Неверный начальный статус второго заказа. Ожидался PENDING_PAYMENT, получен: $ORDER2_STATUS"
+          exit 1
+        fi
+        echo "✅ Начальный статус второго заказа: $ORDER2_STATUS"
+        
+        echo
+        echo "❌ Тест 9: Отмена второго заказа (REST API)"
+        echo "Ожидаем 2 секунды перед отменой..."
+        sleep 2
+        
+        curl -s -X POST "http://localhost:8080/api/v1/orders/$ORDER2_UUID/cancel"
+        
+        echo "Проверяем статус после отмены..."
+        
+        ORDER2_INFO=$(curl -s -X GET "http://localhost:8080/api/v1/orders/$ORDER2_UUID")
+        ORDER2_STATUS=$(echo $ORDER2_INFO | grep -o '"status":"[^"]*' | cut -d'"' -f4)
+        if [ -z "$ORDER2_STATUS" ]; then
+          ORDER2_STATUS=$(echo $ORDER2_INFO | grep -o '"status": "[^"]*' | cut -d'"' -f4)
+        fi
+        
+        if [[ "$ORDER2_STATUS" != *"CANCELLED"* ]]; then
+          echo "❌ Неверный статус отмененного заказа. Ожидался CANCELLED, получен: $ORDER2_STATUS"
+          echo "🔍 Детали заказа: $ORDER2_INFO"
+          exit 1
+        fi
+        echo "✅ Статус второго заказа после отмены: $ORDER2_STATUS"
+        
+        echo
+        echo "🎉 Все тесты API успешно выполнены!"
