--- a/shared/api/order/v1/components/pay_order_request.yaml
+++ b/shared/api/order/v1/components/pay_order_request.yaml
@@ -3,4 +3,4 @@ required:
   - payment_method
 properties:
   payment_method:
-    $ref: ../components/enums/payment_method.yaml
+    $ref: ./enums/payment_method.yaml
